--- a/src/Club/RequestBundle/Resources/views/PlayerMarket/index.html.twig
+++ b/src/Club/RequestBundle/Resources/views/PlayerMarket/index.html.twig
@@ -28,7 +28,10 @@
       <td>{{ item.user.name }}</td>
       <td>
       {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-        {% include "ClubLayoutBundle:Default:respond_link.html.twig" with {'url':path('club_request_playermarket_comment', { 'id':item.id })} %}
+        {% include "ClubLayoutBundle:Default:comment_link.html.twig" with {'url':path('club_request_comment_new', { 'id':item.id })} %}
+        {% if item.user == app.user %}
+          {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('club_request_playermarket_delete', { 'id':item.id })} %}
+        {% endif %}
       {% endif %}
       </td>
     </tr>
