--- a/src/Club/RequestBundle/Resources/views/PlayerMarket/index.html.twig
+++ b/src/Club/RequestBundle/Resources/views/PlayerMarket/index.html.twig
@@ -13,12 +13,13 @@
     <tr class="bg">
       <th>Time</th>
       <th>User</th>
+      <th>Comments</th>
       <th>Action</th>
     </tr>
   <thead>
   <tfoot>
     <tr class="bg">
-      <td colspan="3">&#160;</td>
+      <td colspan="4">&#160;</td>
     </tr>
   </tfoot>
   <tbody>
@@ -26,18 +27,17 @@
     <tr>
       <td>{{ item.playtime|club_datetime }}</td>
       <td>{{ item.user.name }}</td>
+      <td>{{ item.requestComments|length }}</td>
       <td>
-      {% if is_granted('IS_AUTHENTICATED_FULLY') %}
-        {% include "ClubLayoutBundle:Default:comment_link.html.twig" with {'url':path('club_request_comment_new', { 'id':item.id })} %}
-        {% if item.user == app.user %}
-          {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('club_request_playermarket_delete', { 'id':item.id })} %}
-        {% endif %}
+      {% include "ClubLayoutBundle:Default:comment_link.html.twig" with {'url':path('club_request_comment_index', { 'id':item.id })} %}
+      {% if item.user == app.user %}
+        {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('club_request_playermarket_delete', { 'id':item.id })} %}
       {% endif %}
       </td>
     </tr>
   {% else %}
     <tr>
-      <td colspan="3">There are not items in the players market.</td>
+      <td colspan="4">There are not items in the players market.</td>
     </tr>
   {% endfor %}
   </tbody>
