--- a/src/Club/RequestBundle/Resources/views/PlayerMarket/index.html.twig
+++ b/src/Club/RequestBundle/Resources/views/PlayerMarket/index.html.twig
@@ -8,6 +8,8 @@
 </p>
 {% endif %}
 
+<h2>Players market</h2>
+
 <table class="style">
   <thead>
     <tr class="bg">
@@ -31,6 +33,7 @@
       <td>
       {% include "ClubLayoutBundle:Default:comment_link.html.twig" with {'url':path('club_request_comment_index', { 'id':item.id })} %}
       {% if item.user == app.user %}
+        {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('club_request_playermarket_edit', { 'id':item.id })} %}
         {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('club_request_playermarket_delete', { 'id':item.id })} %}
       {% endif %}
       </td>
