--- a/src/Club/RequestBundle/Resources/views/PlayerMarket/index.html.twig
+++ b/src/Club/RequestBundle/Resources/views/PlayerMarket/index.html.twig
@@ -10,6 +10,7 @@
 
 <h2>Players market</h2>
 
+<p>If you want to go play but dont have a partner, you can write in a timestamp here when you can play. Other can contact you and you can meet up and play a game.</p>
 <table class="style">
   <thead>
     <tr class="bg">
