--- a/src/Club/RequestBundle/Resources/views/PlayerMarket/new.html.twig
+++ b/src/Club/RequestBundle/Resources/views/PlayerMarket/new.html.twig
@@ -3,6 +3,7 @@
 {% block body %}
 
 <form method="post" action="{{ path('club_request_playermarket_new') }}">
+<p>When are you available for a game.</p>
 {% include "ClubLayoutBundle:Default:form.html.twig" %}
 </form>
 
