Send mail on comment on request.

--- a/src/Club/MailBundle/Resources/views/Template/request_comment.html.twig
+++ b/src/Club/MailBundle/Resources/views/Template/request_comment.html.twig
@@ -1,6 +1,6 @@
-Dear {{ user.profile.name }},
+Dear {{ comment.request.user.profile.name }},
 
-You have a request in the players market at {{ comment.request.play_time|club_datetime }}.
+You have a request in the players market at {{ comment.request.playTime|club_datetime }}.
 
 {{ comment.user.name }} has just responded to your request with:
 
