--- a/src/Club/TournamentBundle/Resources/views/AdminTournament/index.html.twig
+++ b/src/Club/TournamentBundle/Resources/views/AdminTournament/index.html.twig
@@ -22,6 +22,7 @@
       <td>{{ tournament.name }}</td>
       <td>{{ tournament.createdAt|club_datetime }}</td>
       <td>
+        {% include "ClubLayoutBundle:Default:generate_link.html.twig" with {'url':path('club_tournament_admintournament_generate', { 'id':tournament.id })} %}
         {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('club_tournament_admintournament_edit', { 'id':tournament.id })} %}
         {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('club_tournament_admintournament_delete', { 'id':tournament.id })} %}
       </td>
