--- a/src/Club/TournamentBundle/Resources/views/AdminTournament/row.html.twig
+++ b/src/Club/TournamentBundle/Resources/views/AdminTournament/row.html.twig
@@ -1,2 +1,2 @@
-<p>{% if row.name != '' %}{{ row.name }} {% if row.result != '' %} ({{ row.seed }}) <span class="score">{{ row.result }}</span>{% endif %}{% endif %}</p>
+<p>{% if row.user != '' %}{{ row.user.name }} {% if row.result != '' %} ({{ row.seed }}) <span class="score">{{ row.result }}</span>{% endif %}{% endif %}</p>
 
