Hide create match button if not logged in.

--- a/src/Club/MatchBundle/Resources/views/Match/index.html.twig
+++ b/src/Club/MatchBundle/Resources/views/Match/index.html.twig
@@ -2,9 +2,11 @@
 
 {% block body %}
 
+{% if is_granted('IS_AUTHENTICATED_FULLY') %}
 <p class="box">
   <a href="{{ path('club_match_match_new') }}" class="btn-create"><span>{% trans %}Insert match{% endtrans %}</span></a>
 </p>
+{% endif %}
 
 {% render "ClubMatchBundle:Match:Recent" with {'limit':20} %}
 
