Added more information to tournament index.

--- a/src/Club/TournamentBundle/Resources/views/AdminTournament/index.html.twig
+++ b/src/Club/TournamentBundle/Resources/views/AdminTournament/index.html.twig
@@ -7,19 +7,25 @@
   <thead>
     <tr>
       <th>{% trans %}Name{% endtrans %}</th>
+      <th>{% trans %}Min{% endtrans %}</th>
+      <th>{% trans %}Max{% endtrans %}</th>
+      <th>{% trans %}Current{% endtrans %}</th>
       <th>{% trans %}Created at{% endtrans %}</th>
       <th>{% trans %}Action{% endtrans %}</th>
     </tr>
   </thead>
   <tfoot>
     <tr class="bg">
-      <td colspan="3">&#160;</td>
+      <td colspan="6">&#160;</td>
     </tr>
   </tfoot>
   <tbody>
   {% for tournament in tournaments %}
     <tr>
       <td>{{ tournament.name }}</td>
+      <td>{{ tournament.minAttend }}</td>
+      <td>{{ tournament.maxAttend }}</td>
+      <td>{{ tournament.attends|length }}</td>
       <td>{{ tournament.createdAt|club_datetime }}</td>
       <td>
         {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('club_tournament_admintournament_edit', { 'id':tournament.id })} %}
@@ -30,7 +36,7 @@
     </tr>
   {% else %}
   <tr>
-    <td colspan="3">{% trans %}There are no tournaments.{% endtrans %}</td>
+    <td colspan="6">{% trans %}There are no tournaments.{% endtrans %}</td>
   </tr>
   {% endfor %}
   </tbody>
