--- a/src/Club/TournamentBundle/Resources/views/Tournament/show.html.twig
+++ b/src/Club/TournamentBundle/Resources/views/Tournament/show.html.twig
@@ -32,4 +32,8 @@
 
 </div> <!-- /box-03 -->
 
+{% if tournament.build %}
+  {% include "ClubTournamentBundle:Tournament:bracket.html.twig" %}
+{% endif %}
+
 {% endblock %}
