--- a/src/Club/TournamentBundle/Resources/views/AdminTournamentAttend/index.html.twig
+++ b/src/Club/TournamentBundle/Resources/views/AdminTournamentAttend/index.html.twig
@@ -38,12 +38,13 @@
       <td>{{ tournament.name }}</td>
       <td>{{ attend.createdAt|club_datetime }}</td>
       <td>
+        {% include "ClubLayoutBundle:Default:edit_link.html.twig" with {'url':path('club_tournament_admintournamentattend_edit', { 'id':attend.id })} %}
         {% include "ClubLayoutBundle:Default:delete_link.html.twig" with {'url':path('club_tournament_admintournamentattend_delete', { 'id':attend.id })} %}
       </td>
     </tr>
   {% else %}
   <tr>
-    <td colspan="4">{% trans %}There are no users in the tournament.{% endtrans %}</td>
+    <td colspan="5">{% trans %}There are no users in the tournament.{% endtrans %}</td>
   </tr>
   {% endfor %}
   </tbody>
