Fixed Tournament bracket.

--- a/src/Club/TournamentBundle/Resources/views/Tournament/show.html.twig
+++ b/src/Club/TournamentBundle/Resources/views/Tournament/show.html.twig
@@ -33,7 +33,7 @@
 </div> <!-- /box-03 -->
 
 {% if tournament.build %}
-  {% include "ClubTournamentBundle:Tournament:bracket.html.twig" %}
+  {% include "ClubTournamentBundle:AdminTournament:bracket.html.twig" %}
 {% endif %}
 
 {% endblock %}
