--- a/src/Club/TournamentBundle/Resources/views/Tournament/show.html.twig
+++ b/src/Club/TournamentBundle/Resources/views/Tournament/show.html.twig
@@ -2,7 +2,7 @@
 
 {% block body %}
 
-{% if is_granted('IS_AUTHENTICATED_FULLY') %}
+{% if tournament.build == false and is_granted('IS_AUTHENTICATED_FULLY') %}
 <p class="box">
   {% if attending %}
   <a href="{{ path('club_tournament_tournament_unattend', {'id':tournament.id}) }}" class="btn-delete"><span>{% trans %}Unattend{% endtrans %}</span></a>
