Added log view for a single user.

--- a/src/Club/UserBundle/Resources/views/AdminUser/header.html.twig
+++ b/src/Club/UserBundle/Resources/views/AdminUser/header.html.twig
@@ -4,4 +4,5 @@
   <a href="{{ path('admin_user_group', { 'id':user.id }) }}" class="btn-info"><span>{% trans %}Group{% endtrans %}</span></a>
   <a href="{{ path('admin_user_note', { 'id':user.id }) }}" class="btn-info"><span>{% trans %}Notes{% endtrans %}</span></a>
   <a href="{{ path('club_user_adminuser_shop', { 'id':user.id }) }}" class="btn-info"><span>{% trans %}Shop as{% endtrans %}</span></a>
+  <a href="{{ path('club_user_adminuser_log', { 'id':user.id }) }}" class="btn-info"><span>{% trans %}Log{% endtrans %}</span></a>
 </p>
