--- a/src/Club/LayoutBundle/Resources/views/Default/fields.html.twig
+++ b/src/Club/LayoutBundle/Resources/views/Default/fields.html.twig
@@ -1,7 +1,7 @@
 {% block field_row %}
 {% spaceless %}
   <p>
-    {{ form_label(form) }}<br />
+    {{ form_label(form, label|default(null)) }}<br />
     {{ form_widget(form, {'attr': {'class':'input-text' }}) }}
     {{ form_errors(form) }}<br />
   </p>
@@ -13,15 +13,9 @@
     {% if required %}
         {% set attr = attr|merge({'class': attr.class|default('') ~ ' required'}) %}
     {% endif %}
-    <label class="req" {% for attrname,attrvalue in attr %} {{attrname}}="{{attrvalue}}"{% endfor %}>{{ label|trans }}:</label>
+    <label class="req" {% for attrname,attrvalue in attr %} {{attrname}}="{{attrvalue}}"{% endfor %}>{{ label|trans }}</label>
 {% endspaceless %}
 {% endblock %}
-
-{% block field_label %}
-{% spaceless %}
-    <label class="req" for="{{ id }}"{% for attrname,attrvalue in attr %} {{attrname}}="{{attrvalue}}"{% endfor %}>{{ label|trans }}:</label>
-{% endspaceless %}
-{% endblock field_label %}
 
 {% block field_errors %}
 {% spaceless %}
